# ml-exploration-py

./: .gitignore  README.md  TODO.md  makefile  pyproject.toml
models/: decision_tree.py  linear_regression.py
tests/: test_linear_regression.py
