[tool.poetry]
name = "ml-exploration-py"
version = "0.1.0"
description = "Exploring machine learning algorithms and concepts in Python"
authors = ["Eric Fulmer <eric.r.fulmer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.1.2"
pandas = "^1.1.4"
numpy = "^1.19.4"
mypy = "^0.790"
pytest-cov = "^2.10.1"
ipython = "^7.19.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
